--- a/Lab1/style.css
+++ b/Lab1/style.css
@@ -1,30 +1,1 @@
-nav{
-    background-color: rgb(0, 0, 0);
-}
-
-.nav-link{
-    color: white !important;
-}
-
-body, html {
-    height: 100%;
-}
-
-body{
-    overflow-x: hidden
-}
-
-/* Place text in the middle of the image */
-.hero-text {
-  text-align: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: white;
-}
-
-#back{
-    height: 100vh;
-}
-
+nav{background-color:#000}.nav-link{color:#fff!important}body,html{height:100%}body{overflow-x:hidden}.hero-text{text-align:center;position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);color:#fff}#back{height:100vh}
